--- a/views/update-user.ejs
+++ b/views/update-user.ejs
@@ -21,17 +21,17 @@
     </div>
     <div class="container">
         <div class="bg-success p-40">
-          <form action="/users/update/<%= userD.id %>" method="POST">
+          <form action="/users/update/<%= user.id %>" method="POST">
             <label>First Name:</label>
-            <input type="text" name="firstname" value="<%= userD.firstname %>" class="form-control" placeholder="Firstname" /><br />
+            <input type="text" name="firstname" value="<%= user.firstname %>" class="form-control" placeholder="Firstname" /><br />
             <label>Last Name:</label>
-            <input type="text" name="lastname" value="<%= userD.lastname %>" class="form-control" placeholder="Lastname" required /><br />
+            <input type="text" name="lastname" value="<%= user.lastname %>" class="form-control" placeholder="Lastname" required /><br />
             <label>Username:</label>
-            <input type="text" name="username" value="<%= userD.username %>" class="form-control" placeholder="Username" required /><br />
+            <input type="text" name="username" value="<%= user.username %>" class="form-control" placeholder="Username" required /><br />
             <label>Email:</label>
-            <input type="email" name="email" value="<%= userD.email %>" class="form-control" placeholder="Email" required /><br />
+            <input type="email" name="email" value="<%= user.email %>" class="form-control" placeholder="Email" required /><br />
             <label>Password:</label>
-            <input type="password" name="password" value="<%= userD.password %>" class="form-control" placeholder="Password" required /><br />
+            <input type="password" name="password" value="<%= user.password %>" class="form-control" placeholder="Password" required /><br />
             <button class="btn btn-success" type="submit">Submit</button>
           </form>
     </div>
